--- a/sudoku.ui
+++ b/sudoku.ui
@@ -17,50 +17,14 @@
    <enum>Qt::RightToLeft</enum>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QLabel" name="OutputLabel1">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>30</y>
-      <width>49</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="ErrorLabel">
-    <property name="geometry">
-     <rect>
-      <x>890</x>
-      <y>440</y>
-      <width>211</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>18</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QTableWidget" name="playerTable">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>890</x>
-      <y>300</y>
+      <x>900</x>
+      <y>430</y>
       <width>211</width>
       <height>144</height>
      </rect>
@@ -161,8 +125,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>860</x>
-      <y>60</y>
+      <x>870</x>
+      <y>200</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -188,9 +152,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>100</y>
-      <width>341</width>
+      <x>850</x>
+      <y>240</y>
+      <width>321</width>
       <height>101</height>
      </rect>
     </property>
@@ -209,124 +173,24 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QTableWidget" name="playerTable_2">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
+   <widget class="QPushButton" name="restartButton">
     <property name="geometry">
      <rect>
-      <x>890</x>
-      <y>540</y>
+      <x>900</x>
+      <y>650</y>
       <width>211</width>
-      <height>281</height>
-     </rect>
-    </property>
-    <property name="focusPolicy">
-     <enum>Qt::NoFocus</enum>
-    </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
-    </property>
-    <property name="editTriggers">
-     <set>QAbstractItemView::NoEditTriggers</set>
-    </property>
-    <property name="tabKeyNavigation">
-     <bool>false</bool>
-    </property>
-    <property name="showDropIndicator" stdset="0">
-     <bool>false</bool>
-    </property>
-    <property name="dragDropOverwriteMode">
-     <bool>false</bool>
-    </property>
-    <property name="selectionMode">
-     <enum>QAbstractItemView::NoSelection</enum>
-    </property>
-    <property name="selectionBehavior">
-     <enum>QAbstractItemView::SelectItems</enum>
-    </property>
-    <property name="rowCount">
-     <number>0</number>
-    </property>
-    <property name="columnCount">
-     <number>2</number>
-    </property>
-    <attribute name="horizontalHeaderVisible">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="horizontalHeaderCascadingSectionResizes">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="horizontalHeaderStretchLastSection">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="verticalHeaderVisible">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderCascadingSectionResizes">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderHighlightSections">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderShowSortIndicator" stdset="0">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderStretchLastSection">
-     <bool>false</bool>
-    </attribute>
-    <column>
-     <property name="text">
-      <string>Player</string>
-     </property>
-     <property name="textAlignment">
-      <set>AlignCenter</set>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Score</string>
-     </property>
-     <property name="textAlignment">
-      <set>AlignCenter</set>
-     </property>
-    </column>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>850</x>
-      <y>490</y>
-      <width>281</width>
       <height>51</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>20</pointsize>
-     </font>
-    </property>
     <property name="text">
-     <string>High-Score:</string>
-    </property>
-    <property name="scaledContents">
-     <bool>false</bool>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <string>RESTART</string>
     </property>
    </widget>
    <zorder>sudokuTable</zorder>
-   <zorder>OutputLabel1</zorder>
-   <zorder>ErrorLabel</zorder>
    <zorder>playerTable</zorder>
    <zorder>label</zorder>
    <zorder>currentName</zorder>
-   <zorder>playerTable_2</zorder>
-   <zorder>label_2</zorder>
+   <zorder>restartButton</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
