--- a/sudoku.ui
+++ b/sudoku.ui
@@ -23,8 +23,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>430</y>
+      <x>920</x>
+      <y>200</y>
       <width>211</width>
       <height>144</height>
      </rect>
@@ -125,8 +125,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>870</x>
-      <y>200</y>
+      <x>890</x>
+      <y>20</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -152,8 +152,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>240</y>
+      <x>860</x>
+      <y>60</y>
       <width>321</width>
       <height>101</height>
      </rect>
@@ -176,8 +176,8 @@
    <widget class="QPushButton" name="restartButton">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>650</y>
+      <x>920</x>
+      <y>770</y>
       <width>211</width>
       <height>51</height>
      </rect>
@@ -186,11 +186,50 @@
      <string>RESTART</string>
     </property>
    </widget>
+   <widget class="QTextEdit" name="console">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>470</y>
+      <width>211</width>
+      <height>261</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>430</y>
+      <width>211</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Sans</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>CONSOLE</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
    <zorder>sudokuTable</zorder>
    <zorder>playerTable</zorder>
    <zorder>label</zorder>
    <zorder>currentName</zorder>
    <zorder>restartButton</zorder>
+   <zorder>console</zorder>
+   <zorder>label_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
